# Clipboard-Translator

./: .gitignore  CHANGELOG.md  Cargo.toml  DETAILED_OVERVIEW.md  OVERVIEW.md  README.md  dump_source.bat  dump_source.ps1  test.py
.github/workflows/: release.yml
docs/: CHANGELOG.md
src/: clipboard.rs  config.rs  credential.rs  gemini.rs  hotkey.rs  hotkey_hook.rs  main.rs  notification.rs  startup.rs
src/ui/: common.rs  mod.rs  result.rs  setup.rs
