[package]
name = "clipboard-translator"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clipboard-win = "5.0"
windows = { version = "0.52", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
] }
winreg = "0.52"
egui = "0.30"
eframe = { version = "0.30", default-features = false, features = ["default_fonts", "glow"] }
egui_commonmark = { version = "0.19", default-features = false }
dirs = "5.0"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
